fixes the header image stretch issues

--- a/css/general.css
+++ b/css/general.css
@@ -53,9 +53,22 @@ h1, h2, h3 {
   color: #412920;
 }
 
-.main_display > img {
+/* .main_display > img {
   position: relative;
   width: 100%;
   height: 300px;
   max-height: 300px;
+} */
+
+.static_hero_image {
+  height: 500px;
+  overflow: hidden;
+}
+
+.static_hero_image > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  
 }
