--- a/css/service-category.css
+++ b/css/service-category.css
@@ -56,10 +56,3 @@
     flex-direction: column;
     align-items: center;
 }
-
-.static_hero_image > img {
-    position: relative;
-    width: 100%;
-    height: 300px;
-    max-height: 300px;
-}
